k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tour-app-frontend
  namespace: tour-app
spec:
  selector:
    app: tour-app-frontend
  ports:
    - port: 80
      targetPort: 80
