k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tour-app-ingress
  namespace: tour-app

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tour-app-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tour-app-backend
                port:
                  number: 8080
